--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,13 +15,13 @@ dotnet_csproj:
   informational_version: '{version}'
 before_build:
 - ps: >-
-    cd stage1/src
+    cd ClientApp
     yarn install
     yarn webpack --config webpack.config.vendor.js
     yarn webpack
     dotnet restore
 build:
-  project: stage1\src\stage1.csproj
+  project: dotnet.csproj
   publish_aspnet_core: true
   verbosity: minimal
 notifications:
